--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,12 @@
     /* txt cl */
     --main-cl: #757575;
     --second-cl: #212121;
-    --accent-cl: #2196F3;
+    --accent-cl: #2195f3;
+    --add-white-cl: #ffffff;
+
     /* bg-cl */
-    --main-bg-cl: rgb(62, 59, 59);
-    --second-bg-cl: #2F303A;
+    --main-bg-cl: rgb(221, 221, 221);
+    --second-bg-cl: rgb(83, 83, 83);
     --accent-bg-cl: #2196F3;
     /* animation */
     --anim-duration-timing: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -19,6 +21,7 @@
     margin-right: auto;
     margin-left: auto;
     background-color: var(--second-bg-cl);
+    margin-bottom: 40px;
 }
 
 @media screen and (max-width: 767px) {
@@ -155,7 +158,7 @@ img {
     color: var(--add_black_cl);
 }
 
-.logo--white {
+.logo {
     color: var(--add_white_cl);
 }
 
@@ -171,4 +174,82 @@ img {
     }
 }
 
+.site-headline {
+    color: var(--add-white-cl);
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.61;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 30px;
+    width: 360px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
 
+@media screen and (max-width: 479px) {
+    .site-headline {
+        max-width: 100%;
+        overflow: hidden;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .site-headline {
+        font-size: 44px;
+        width: 696px;
+        line-height: 1.36;
+    }
+}
+
+.hero {
+    text-align: center;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    max-width: 768px;
+    height: 400px;
+    margin-right: auto;
+    margin-left: auto;
+    background: var(--second-bg-cl);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../tri-kozaky/img/kozaky-lyst-sultanu.jpg), linear-gradient(to right, #C4C4C4, #C4C4C4);
+}
+
+@media screen and (min-width: 1200px) {
+.hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-width: 1600px;
+    height: 600px;
+}
+}
+
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+.hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../tri-kozaky/img/kozaky-lyst-sultanu.jpg), linear-gradient(to right, #C4C4C4, #C4C4C4);
+}
+}
+@media screen and (min-width: 768px) {
+.hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../tri-kozaky/img/kozaky-lyst-sultanu.jpg), linear-gradient(to right, #C4C4C4, #C4C4C4);
+}
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+.hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../tri-kozaky/img/kozaky-lyst-sultanu.jpg), linear-gradient(to right, #C4C4C4, #C4C4C4);
+}
+}
+@media screen and (min-width: 1200px) {
+.hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../tri-kozaky/img/kozaky-lyst-sultanu.jpg), linear-gradient(to right, #C4C4C4, #C4C4C4);
+}
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+.hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../tri-kozaky/img/kozaky-lyst-sultanu.jpg), linear-gradient(to right, #C4C4C4, #C4C4C4);
+}
+}
